--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
   <head>
-    <link rel="stylesheet" href="css/bootstrap.css">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="bootstrap.css">
+    <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Cedarville+Cursive|Merriweather|Slabo+27px" rel="stylesheet">
     <link rel="icon" href="favicon.ico">
     <meta charset="utf-8">
@@ -10,7 +10,7 @@
   </head>
   <body>
     <div class="top-container">
-      <img class="cloud-top" src="images/a4.png" alt="clund-images">
+      <img class="cloud-top" src="a4.png" alt="clund-images">
       <div class="nav">
         <a class="nav-menu" href="#">Home</a>
         <a class="nav-menu" href="#">Home</a>
@@ -19,14 +19,14 @@
       </div>
       <h1>I'm Divyansh Darshan</h1>
       <p class="top">I'm a developer.</p>
-        <img class="cloud-bottom" src="images/a4.png" alt="clund-images">
-        <img class="mountain" src="images/a1.png" alt="mountain-images">
+        <img class="cloud-bottom" src="a4.png" alt="clund-images">
+        <img class="mountain" src="a1.png" alt="mountain-images">
 
     </div>
 
     <div class="middle-container">
   <div class="profile">
-    <img class="pro-img" src="images/p1.jpg" alt="my-images">
+    <img class="pro-img" src="p1.jpg" alt="my-images">
     <h2 class="head">Hello.</h2>
     <p class="head-para">Achieved excellent grades in High school , And in higher secondary examination also.I have given two seminars in my school days and have ability of leadership.I have also participated in many extracurricular activities in my collage and school life .I have coordinated some events as a co-ordinator and voleenteers.</p>
   </div>
@@ -34,12 +34,12 @@
   <div class="skills">
     <h2 class="head">My Skills</h2>
     <div class="skill-row">
-      <img class="middle-img1" src="images/s4.png" alt="skills">
+      <img class="middle-img1" src="s4.png" alt="skills">
       <h3>Front end Web development</h3>
       <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
     </div>
     <div class="skill-row">
-      <img class="middle-img2" src="images/s5.png" alt="skills">
+      <img class="middle-img2" src="s5.png" alt="skills">
       <h3>Motivational Speaker</h3>
       <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
     </div>
