--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <h3> Ask anything here and feedback. </h3>
     <p class="head-para">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
     <a class="btn" href="#">CONTACT ME</a>
-    <a class="btn" href="cv/index.html">My old CV</a>
+    <a class="btn" href="cv/index1.html">My old CV</a>
   </div>
 </div>
 
